--- a/src/styles/components/_widget.css
+++ b/src/styles/components/_widget.css
@@ -7,6 +7,12 @@
     @apply dark:bg-blue-4 dark:shadow-none;
   }
 
+  .widget-large {
+    @apply max-w-[743px] p-10 md:rounded-30;
+    @apply bg-white md:shadow-widget;
+    @apply dark:bg-blue-4 dark:shadow-none;
+  }
+
   .widget-block {
     @apply rounded-30 mt-12 p-12;
     @apply bg-blue-0;
