--- a/src/styles/components/_widget.css
+++ b/src/styles/components/_widget.css
@@ -8,7 +8,7 @@
   }
 
   .widget-large {
-    @apply max-w-full p-10 md:rounded-30;
+    @apply w-full p-10 md:rounded-30;
     @apply bg-white md:shadow-widget;
     @apply dark:bg-blue-4 dark:shadow-none;
   }
